# alpha-monitor

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cicd.yml
alpha_monitor/data/: data_scrapper.py
exploration/: testing.ipynb
strategies/: template.md
tests/data/: test_data_scrapper.py
