[project]
name = "alpha-monitor"
version = "0.1.0"
description = "A monitoring tool for Alpha services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "isort>=7.0.0",
    "pandas>=3.0.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "yfinance>=1.1.0",
]
authors = [
  { name = "Sam Taylor" }
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["alpha_monitor"]
